--- a/app/src/main/res/menu/query_settings.xml
+++ b/app/src/main/res/menu/query_settings.xml
@@ -18,4 +18,10 @@
         android:checked="false"
         android:title="@string/sort_2" />
 
+    <item
+        android:id="@+id/sort_3"
+        android:checkable="true"
+        android:checked="false"
+        android:title="Marked as favorite" />
+
 </menu>
