--- a/app/src/main/res/layout/detail_movie.xml
+++ b/app/src/main/res/layout/detail_movie.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/white"
-        android:orientation="vertical">
+        android:visibility="visible">
+
+
+        <!--Your comment -->
 
 
         <TextView
@@ -22,92 +26,101 @@
             android:paddingBottom="35dp"
             android:text="Chappie"
             android:textColor="@android:color/white"
-            android:textSize="55sp"/>
+            android:textSize="55sp"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="0dp" />
 
-        <!--Your comment -->
+        <ImageView
+            android:id="@+id/movie_poster"
+            android:layout_width="180dp"
+            android:layout_height="250dp"
+            android:layout_marginTop="16dp"
+            android:paddingLeft="25dp"
+            android:paddingTop="10dp"
+            android:src="@mipmap/ic_launcher"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/movie_title" />
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/movie_year"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/movie_poster"
-                android:layout_width="180dp"
-                android:layout_height="250dp"
-                android:paddingLeft="25dp"
-                android:paddingTop="10dp"
-                android:src="@mipmap/ic_launcher" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingLeft="35dp">
-
-                <TextView
-                    android:id="@+id/movie_year"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="20dp"
-                    android:paddingLeft="5dp"
-                    android:text="2015"
-                    android:textSize="28sp" />
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="36dp"
+            android:paddingLeft="5dp"
+            android:paddingTop="20dp"
+            android:text="2015"
+            android:textSize="28sp"
+            app:layout_constraintStart_toEndOf="@+id/movie_poster"
+            app:layout_constraintTop_toBottomOf="@+id/movie_title" />
 
 
-                <TextView
-                    android:id="@+id/movie_avg_vote"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:text="8.1/10"
-                    android:textStyle="bold"
-                    android:paddingTop="5dp"
-                    android:paddingBottom="5dp"
-                    android:paddingLeft="5dp"/>
+        <TextView
+            android:id="@+id/movie_avg_vote"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:paddingLeft="5dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:text="8.1/10"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/movie_poster"
+            app:layout_constraintTop_toBottomOf="@+id/movie_year" />
 
-                <Button
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/favorite_buttong"
-                    android:background="@color/favoriteButton"
-                    android:textSize="12sp"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
+        <ImageButton
+            android:id="@+id/button"
+            android:layout_width="43dp"
+            android:layout_height="49dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="12dp"
+            android:background="@color/white"
+            android:src="@drawable/ic_favorite_grey"
+            app:layout_constraintStart_toEndOf="@+id/movie_poster"
+            app:layout_constraintTop_toBottomOf="@+id/movie_avg_vote" />
 
         <TextView
             android:id="@+id/movie_overview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:text="@string/dummy_text"
+            android:layout_marginTop="44dp"
             android:paddingLeft="13dp"
-            android:paddingTop="20dp"/>
-
+            android:paddingTop="20dp"
+            android:text="@string/dummy_text"
+            android:textSize="18sp"
+            android:visibility="visible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/movie_poster" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/trailer_recycler"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            tools:listitem="@layout/trailer_item"
-            tools:layoutManager="android.support.v7.widget.ListLayoutManager"
-            tools:itemCount="5"
-            tools:orientation="vertical"
-            tools:scrollbars="vertical"
-            tools:spanCount="2" />
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="52dp"
+            android:orientation="horizontal"
+            android:visibility="visible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/movie_overview"
+            tools:itemCount="4"
+            tools:listitem="@layout/recycler_view_item_1"
+            tools:orientation="horizontal"
+            tools:scrollbars="horizontal" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/review_recycler"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            tools:listitem="@android:layout/simple_list_item_checked"
-            tools:itemCount="5"
-            tools:orientation="horizontal"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="84dp"
+            android:visibility="visible"
+            app:layout_constraintTop_toBottomOf="@+id/trailer_recycler"
+            tools:itemCount="3"
+            tools:layout_editor_absoluteX="0dp"
+            tools:listitem="@layout/recycler_view_item"
+            tools:orientation="horizontal" />
 
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
