--- a/app/src/main/res/layout/trailer_item.xml
+++ b/app/src/main/res/layout/trailer_item.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/image_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="150dp"
         android:scaleType="fitXY"
         tools:srcCompat="@tools:sample/backgrounds/scenic[11]" />
 
