--- a/app/src/main/res/layout/detail_movie.xml
+++ b/app/src/main/res/layout/detail_movie.xml
@@ -96,7 +96,7 @@
             app:layout_constraintTop_toBottomOf="@+id/movie_poster" />
 
 
-        <ImageView
+        <View
             android:id="@+id/divider"
             android:layout_width="0dp"
             android:layout_height="1dp"
