--- a/app/src/main/res/layout/reviews_item.xml
+++ b/app/src/main/res/layout/reviews_item.xml
@@ -5,11 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/image_1"
-        android:layout_width="200dp"
+    <TextView
+        android:id="@+id/review_author"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        tools:srcCompat="@tools:sample/backgrounds/scenic[12]" />
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
+        android:text="Author"
+        />
+    <TextView
+        android:id="@+id/review"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="@string/dummy_text"
+        />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="10dp"
+        android:background="@color/windowBackgroundBlack"/>
 
 </LinearLayout>
