--- a/app/src/main/res/layout/trailer_item.xml
+++ b/app/src/main/res/layout/trailer_item.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="wrap_content"
@@ -11,6 +13,19 @@
         android:layout_height="100dp"
         android:paddingLeft="20dp"
         android:scaleType="fitXY"
-        tools:srcCompat="@tools:sample/backgrounds/scenic[11]" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/chappie_big" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/trailer_pic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/ic_play"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/image_1" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
