--- a/app/src/main/res/layout/reviews_item.xml
+++ b/app/src/main/res/layout/reviews_item.xml
@@ -12,6 +12,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
         android:text="Author"
+        android:textStyle="bold"
         />
     <TextView
         android:id="@+id/review"
